--- a/testng/test-output/old/Default suite/methods.html
+++ b/testng/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2a091">  <td>23/04/08 13:52:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelTest.logo()[pri:0, instance:com.paralleltesting.ParallelTest@446293d]">logo</td> 
-  <td>main@1424082571</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>23/04/08 13:52:24</td>   <td>-5549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParallelTest.homePageTitle()[pri:0, instance:com.paralleltesting.ParallelTest@446293d]">homePageTitle</td> 
-  <td>main@1424082571</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>23/04/08 13:52:31</td>   <td>1370</td> <td>&nbsp;</td><td title="&lt;&lt;ParallelTest.close()[pri:0, instance:com.paralleltesting.ParallelTest@446293d]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1424082571</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>23/04/15 21:10:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="A.testCaseThree()[pri:0, instance:com.testng.A@62230c58]">testCaseThree</td> 
+  <td>main@1420232606</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>23/04/15 21:10:19</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="A.testCasetwo()[pri:0, instance:com.testng.A@62230c58]">testCasetwo</td> 
+  <td>main@1420232606</td>   <td></td> </tr>
 </table>
